# aaep

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  DEPLOYMENT.md  LICENSE  LICENSE-MIT  NOTICE  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_clarification.yml
.github/workflows/: conformance-tests.yml  publish-website.yml  schema-validation.yml  spec-build.yml
conformance/: README.md  pyproject.toml
conformance/aaep_conformance/: __init__.py  cli.py  level_1.py  level_2.py  level_3.py  reporter.py  runner.py
conformance/aaep_conformance/checks/: __init__.py  confirmation.py  envelope.py  handshake.py  lifecycle.py  safety.py  streaming.py  tools.py
conformance/aaep_conformance/fixtures/invalid/: duplicate-completion-streaming.json  malformed-event-id.json  missing-required-fields.json  no-critical-urgency-on-errored.json  wrong-default-decision.json
conformance/aaep_conformance/fixtures/valid/: agent.awaiting.confirmation.json  agent.output.streaming.yoruba.json  agent.session.started.json  agent.tool.invoked.high-risk.json  subscription.request.multilingual.json
conformance/tests/: __init__.py  test_checks.py
examples/bridges/mcp-aaep-bridge/: README.md  pyproject.toml
examples/bridges/mcp-aaep-bridge/aaep_mcp_bridge/: __init__.py  bridge.py  risk.py  server.py
examples/bridges/opentelemetry-aaep-bridge/: README.md  pyproject.toml
examples/bridges/opentelemetry-aaep-bridge/aaep_otel_bridge/: __init__.py  bridge.py  translator.py
examples/extensions/medical-hipaa/: README.md  extension.json  pyproject.toml  risk_table.json
examples/extensions/medical-hipaa/aaep_ext_medical_hipaa/: __init__.py  audit.py  redaction.py  risk_classification.py
examples/extensions/multilingual-african-languages/: README.md  extension.json  pyproject.toml
examples/extensions/multilingual-african-languages/aaep_ext_african_languages/: __init__.py  locale_data.py  translations.py
examples/extensions/multilingual-african-languages/translations/: ha.json  ig.json  yo.json
examples/producers/python-anthropic-sdk/: README.md  pyproject.toml
examples/producers/python-anthropic-sdk/aaep_anthropic_sdk/: __init__.py  adapter.py  example_agent.py  server.py
examples/producers/python-anthropic-sdk/tests/: __init__.py  test_adapter.py
examples/producers/python-langchain/: README.md  pyproject.toml
examples/producers/python-langchain/aaep_langchain/: __init__.py  callback_handler.py  example_agent.py  server.py
examples/producers/python-langchain/tests/: __init__.py  test_callback_handler.py
examples/producers/python-microsoft-agent-framework/: README.md  pyproject.toml
examples/producers/python-microsoft-agent-framework/aaep_maf/: __init__.py  example_agent.py  middleware.py  server.py
examples/producers/python-microsoft-agent-framework/tests/: __init__.py  test_middleware.py
examples/producers/python-minimal/: README.md  pyproject.toml
examples/producers/python-minimal/aaep_minimal_producer/: __init__.py  agent.py  emitter.py  server.py
examples/producers/python-minimal/tests/: __init__.py  test_agent.py
examples/producers/typescript-minimal/: README.md  package-lock.json  package.json  tsconfig.json
examples/producers/typescript-minimal/src/: agent.ts  coalescer.ts  emitter.ts  index.ts  server.ts  types.ts
examples/producers/typescript-minimal/test/: emitter.test.ts
examples/subscribers/cli-debug/: README.md  pyproject.toml
examples/subscribers/cli-debug/aaep_cli_debug/: __init__.py  listener.py  main.py
examples/subscribers/narrator-bridge-prototype/: README.md  pyproject.toml
examples/subscribers/narrator-bridge-prototype/aaep_narrator_bridge/: __init__.py  announcer.py  bridge.py  handler.py
examples/subscribers/nvda-addon-prototype/: README.md  build_addon.py  manifest.ini
examples/subscribers/nvda-addon-prototype/aaep_nvda_subscriber/: __init__.py  globalPlugin.py  handler.py  sse_client.py
examples/subscribers/web-subscriber-react/: README.md  package-lock.json  package.json  tsconfig.json
examples/subscribers/web-subscriber-react/public/: demo.html
governance/: ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTENSIONS_REGISTRY.md  GOVERNANCE.md  MAINTAINERS.md  ROADMAP.md  SECURITY.md  TRADEMARK.md
governance/proposals/: ACP-0001-protocol-launch.md  ACP-0002-multilingual-extension.md  template.md
guides/: EXTENSIONS_GUIDE.md  FAQ.md  IMPLEMENTERS_GUIDE.md  QUICKSTART.md  SUBSCRIBERS_GUIDE.md
guides/patterns/: callback-based.md  decorator-based.md  event-emitter-based.md  manual-loop.md  middleware-based.md
schemas/: README.md  envelope.schema.json
schemas/context/: aaep-v1.jsonld
schemas/core/: agent.awaiting.clarification.schema.json  agent.awaiting.confirmation.schema.json  agent.handoff.requested.schema.json  agent.output.streaming.schema.json  agent.progress.updated.schema.json  agent.session.cancelled.schema.json  agent.session.completed.schema.json  agent.session.errored.schema.json  agent.session.started.schema.json  agent.state.changed.schema.json  agent.tool.completed.schema.json  agent.tool.invoked.schema.json
schemas/handshake/: clarification.reply.schema.json  confirmation.reply.schema.json  subscription.accepted.schema.json  subscription.rejected.schema.json  subscription.request.schema.json
spec/: 01-introduction.md  02-terminology.md  03-event-envelope.md  04-core-event-types.md  05-subscription-handshake.md  06-confirmation-protocol.md  07-extensions.md  08-transports.md  09-conformance.md  10-security.md  11-internationalization.md  12-versioning.md  SPEC.md
spec/appendix/: A-event-state-machine.md  B-transport-bindings.md  C-glossary.md  D-references.md
tools/: README.md
tools/aaep-tools/: README.md  pyproject.toml
tools/aaep-tools/aaep_tools/: __init__.py  capture.py  replay.py  validate.py
website/: README.md  build.sh
website/src/: 404.html  _template.html  index.html
website/src/styles/: main.css
(+5 files in other folders)
