[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaep-conformance"
version = "1.0.0"
description = "Conformance test suite for the Agent Accessibility Event Protocol (AAEP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
maintainers = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
keywords = [
    "aaep",
    "accessibility",
    "ai",
    "agent",
    "assistive-technology",
    "conformance",
    "screen-reader",
    "testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "jsonschema>=4.20.0",
    "pyld>=2.0.4",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML",
    "types-jsonschema",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://aaep-protocol.org"
Documentation = "https://aaep-protocol.org/conformance/"
Repository = "https://github.com/Ramseyxlil/aaep"
Issues = "https://github.com/Ramseyxlil/aaep/issues"
Changelog = "https://github.com/Ramseyxlil/aaep/blob/main/CHANGELOG.md"
"Specification" = "https://aaep-protocol.org/spec/"

[project.scripts]
aaep-conformance = "aaep_conformance.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aaep_conformance*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
aaep_conformance = [
    "fixtures/valid/*.json",
    "fixtures/invalid/*.json",
    "templates/*.html",
    "templates/*.css",
]

# === Tool configurations ===

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=aaep_conformance",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
asyncio_mode = "auto"
markers = [
    "level1: Level 1 conformance tests",
    "level2: Level 2 conformance tests",
    "level3: Level 3 conformance tests",
    "slow: Tests that take longer than 5 seconds",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pyld.*"
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["aaep_conformance"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
