[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaep-otel-bridge"
version = "1.0.0"
description = "Bridge AAEP event streams to OpenTelemetry traces for unified SRE/compliance observability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
keywords = [
    "aaep",
    "accessibility",
    "opentelemetry",
    "otel",
    "observability",
    "tracing",
    "bridge",
    "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: OpenTelemetry",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

# Runtime: minimal so the bridge runs in mock mode without OTEL SDK.
# Install [otel] for real OTLP export, or [console] for local dev exporters.
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
console = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://aaep-protocol.org"
Repository = "https://github.com/Ramseyxlil/aaep"
"Bug Tracker" = "https://github.com/Ramseyxlil/aaep/issues"
"OpenTelemetry" = "https://opentelemetry.io/"
"Reference Specification" = "https://aaep-protocol.org/spec/"

[project.scripts]
aaep-otel-bridge = "aaep_otel_bridge.bridge:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aaep_otel_bridge*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
