[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaep-langchain-producer"
version = "1.0.0"
description = "AAEP integration for LangChain agents via callback handler"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
keywords = [
    "aaep",
    "accessibility",
    "agent",
    "langchain",
    "example",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

# Runtime dependencies. We depend on aaep-minimal-producer to reuse the
# AAEPEmitter class — there is no AAEP-specific code duplication. We depend
# only on langchain-core (not full langchain) to keep this lightweight; the
# example_agent demo additionally requires langchain for the OpenAI tools agent.
dependencies = [
    "aaep-minimal-producer>=1.0.0",
    "langchain-core>=0.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
demo = [
    # Full LangChain + OpenAI for running the example_agent.py demo
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "aaep-conformance>=1.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://aaep-protocol.org"
Repository = "https://github.com/Ramseyxlil/aaep"
"Bug Tracker" = "https://github.com/Ramseyxlil/aaep/issues"
"Reference Specification" = "https://aaep-protocol.org/spec/"
"Implementer's Guide" = "https://aaep-protocol.org/guides/implementers/"

[project.scripts]
aaep-langchain-demo = "aaep_langchain.example_agent:main"
aaep-langchain-server = "aaep_langchain.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aaep_langchain*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
