[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaep-minimal-producer"
version = "1.0.0"
description = "Reference AAEP producer example — minimal implementation in pure Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
keywords = [
    "aaep",
    "accessibility",
    "agent",
    "example",
    "reference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

# Minimal runtime dependencies. We deliberately avoid framework packages
# (LangChain, OpenAI SDK, etc.) so this example demonstrates AAEP without
# coupling to any agent framework.
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "aaep-conformance>=1.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://aaep-protocol.org"
Repository = "https://github.com/Ramseyxlil/aaep"
"Bug Tracker" = "https://github.com/Ramseyxlil/aaep/issues"
"Reference Specification" = "https://aaep-protocol.org/spec/"
"Implementer's Guide" = "https://aaep-protocol.org/guides/implementers/"

[project.scripts]
aaep-minimal-producer = "aaep_minimal_producer.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aaep_minimal_producer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
