[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaep-narrator-bridge"
version = "0.1.0"
description = "Bridge AAEP event streams to Microsoft Narrator on Windows via UI Automation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Abdulrafiu Izuafa", email = "Abdulrafiu@izusoft.tech" },
]
keywords = [
    "aaep",
    "accessibility",
    "narrator",
    "windows",
    "screen-reader",
    "uia",
    "ui-automation",
    "microsoft",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: System :: Operating System Kernels",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Real UIA via pywin32 (Windows only)
uia = [
    "pywin32>=306; sys_platform == 'win32'",
]
# Tkinter is in stdlib but listed here as the fallback option
fallback = []
# Optional system tray and config UI
ui = [
    "pystray>=0.19.0",
    "pillow>=10.0.0",
]
# Multilingual integration
multilingual = [
    "aaep-ext-african-languages>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://aaep-protocol.org/subscribers/narrator/"
Repository = "https://github.com/Ramseyxlil/aaep"
"Bug Tracker" = "https://github.com/Ramseyxlil/aaep/issues"
"Narrator Documentation" = "https://support.microsoft.com/windows/complete-guide-to-narrator-e4397a0d-ef4f-b386-d8ae-c172f109bdb1"
"Windows UI Automation" = "https://learn.microsoft.com/en-us/windows/win32/winauto/entry-uiauto-win32"

[project.scripts]
aaep-narrator-bridge = "aaep_narrator_bridge.bridge:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["aaep_narrator_bridge*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
